--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -11,13 +11,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>, biomedical engineering student.<br/>
+					<h1><strong>Balestrini Andrea</strong>,<br/>biomedical engineering student.<br/>
 					My projects, my skills and my life.</h1>
 				</div>
 			</header>
@@ -70,7 +71,8 @@
 							</div>
 						</div>
 					</section>
-
+			</div>
+			
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
@@ -78,6 +80,7 @@
 						<li><a href="docs/memo.pdf" target="_blank" class="icon fa-address-card-o"><span class="label">AddressCard</span></a></li>
 						<li><a href="https://github.com/andreaBalestrini/" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.instagram.com/andrea.balestrini/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					</ul>
 				</div>
 			</footer>
 
