--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>, biomedical engineering student.<br/>
+					<h1><strong>Balestrini Andrea</strong>,<br/>biomedical engineering student.<br/>
 					My projects, my skills and my life.</h1>
 				</div>
 			</header>
@@ -44,12 +45,12 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="arduinoandelectronics.html" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
 								<h3>Arduino and Electronics projects</h3>
-								<p>Since I was a child, I've always loved creating and inventing objects. Here the projects I have made.</p>
+								<p>Since I was a child,&nbsp;I've always loved creating and inventing objects.&nbsp;Here the projects I have made.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="photography.html" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
 								<h3>Photography</h3>
-								<p>With photography I try to capture the situations and landscapes that present themselves before me.</p>
+								<p>With photography I try to capture the emotions I feel.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="radio.html" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
@@ -59,18 +60,8 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="images/UC.jpg" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
 								<h3>Scout</h3>
-								<p>Scouts have always been a constant presence in my life.</p>
+								<p>Scouts have always been an important part of my life.</p>
 							</article>
-							<!--article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/05.jpg" class="image fit thumb"><img src="images/index/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/06.jpg" class="image fit thumb"><img src="images/index/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article-->
 						</div>
 					</section>
 
@@ -79,18 +70,6 @@
 						<h2>Get In Touch</h2>
 						<p>Call me or send me an e-mail and I will contact you as soon as possible!</p>
 						<div class="row">
-							<!--div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div-->
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
@@ -110,6 +89,7 @@
 							</div>
 						</div>
 					</section>
+			</div>
 
 		<!-- Footer -->
 			<footer id="footer">
@@ -118,6 +98,7 @@
 						<li><a href="docs/memo.pdf" target="_blank" class="icon fa-address-card-o"><span class="label">AddressCard</span></a></li>
 						<li><a href="https://github.com/andreaBalestrini/" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.instagram.com/andrea.balestrini/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					</ul>
 				</div>
 			</footer>
 
