--- a/photography.html
+++ b/photography.html
@@ -11,13 +11,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+	
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>, biomedical engineering student.<br />
+					<h1><strong>Balestrini Andrea</strong>,<br/>biomedical engineering student.<br/>
 					My projects, my skills and my life.</h1>
 				</div>
 			</header>
@@ -31,10 +32,10 @@
 							<h2>Photography</h2>
 						</header>
 						<p>In the last years I started to look at the world of photography.
-							I like to look through my photos to show the world as I see it,
-							focusing, in particular, on the nature that surrounds us.<br/>
+							I like to look through my photos to show the world as I see it,&nbsp;focusing,&nbsp;in particular,&nbsp;on the
+							nature that surrounds us.<br/>
 							In my shots I use the old polaroid format (1:1) and I don't use photo editing programs.<br/>
-							I'm not a photographer, I'm just a person who likes to photograph.</p>
+							I'm not a photographer,&nbsp;I'm just a person who likes to photograph.</p>
 					</section>
 
 				<!-- Two -->
@@ -43,22 +44,22 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/20.jpg" class="image fit thumb"><img src="images/photography/thumbs/20.jpg" alt="" /></a>
-								<h3>Stambecchi allo Zerbion, 3 di 3</h3>
+								<h3>Stambecchi allo Zerbion,&nbsp;3 di 3</h3>
 								<p>20 September 2018</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/19.jpg" class="image fit thumb"><img src="images/photography/thumbs/19.jpg" alt="" /></a>
-								<h3>Stambecchi allo Zerbion, 2 di 3</h3>
+								<h3>Stambecchi allo Zerbion,&nbsp;2 di 3</h3>
 								<p>17 September 2018</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/18.jpg" class="image fit thumb"><img src="images/photography/thumbs/18.jpg" alt="" /></a>
-								<h3>Stambecchi allo Zerbion, 1 di 3</h3>
+								<h3>Stambecchi allo Zerbion,&nbsp;1 di 3</h3>
 								<p>15 September 2018</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/17.jpg" class="image fit thumb"><img src="images/photography/thumbs/17.jpg" alt="" /></a>
-								<h3>Guarda mamma, un camoscio! (cit.)</h3>
+								<h3>Guarda mamma,&nbsp;un camoscio!&nbsp;(cit.)</h3>
 								<p>11 December 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -83,7 +84,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/12.jpg" class="image fit thumb"><img src="images/photography/thumbs/12.jpg" alt="" /></a>
-								<h3>Il Vallone di Saint-Barth&eacute;lemy, in tutto il suo splendore autunnale </h3>
+								<h3>Il Vallone di Saint-Barth&eacute;lemy,&nbsp;in tutto il suo splendore autunnale </h3>
 								<p>29 October 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -113,12 +114,12 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/06.jpg" class="image fit thumb"><img src="images/photography/thumbs/06.jpg" alt="" /></a>
-								<h3>Laghi della comba Thuilette (2100m s.l.m.), La Thuile, Valle d'Aosta</h3>
+								<h3>Laghi della comba Thuilette&nbsp;(2100m s.l.m.),&nbsp;La Thuile,&nbsp;Valle d'Aosta</h3>
 								<p>2 October 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/05.jpg" class="image fit thumb"><img src="images/photography/thumbs/05.jpg" alt="" /></a>
-								<h3>Comba Sozin, La Thuile, Valle d'Aosta</h3>
+								<h3>Comba Sozin,&nbsp;La Thuile,&nbsp;Valle d'Aosta</h3>
 								<p>1 October 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -133,12 +134,12 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/02.jpg" class="image fit thumb"><img src="images/photography/thumbs/02.jpg" alt="" /></a>
-								<h3>Portomar&iacute;n - Palas De Rei</h3>
+								<h3>Portomar&iacute;n&nbsp;-&nbsp;Palas De Rei</h3>
 								<p>18 August 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/01.jpg" class="image fit thumb"><img src="images/photography/thumbs/01.jpg" alt="" /></a>
-								<h3>Villafranca del Bierzo - O Cebreiro</h3>
+								<h3>Villafranca del Bierzo&nbsp;-&nbsp;O Cebreiro</h3>
 								<p>14 Agust 2017</p>
 							</article>
 						</div>
@@ -146,6 +147,7 @@
 							<li><a href="https://www.instagram.com/andrea.balestrini/" target="_blank" class="button">For more photos see my IG account</a></li>
 						</ul>
 					</section>
+			</div>
 
 		<!-- Footer -->
 			<footer id="footer">
@@ -154,6 +156,7 @@
 						<li><a href="docs/memo.pdf" target="_blank" class="icon fa-address-card-o"><span class="label">AddressCard</span></a></li>
 						<li><a href="https://github.com/andreaBalestrini/" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.instagram.com/andrea.balestrini/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					</ul>
 				</div>
 			</footer>
 
