--- a/radio.html
+++ b/radio.html
@@ -11,13 +11,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+	
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>, biomedical engineering student.<br/>
+					<h1><strong>Balestrini Andrea</strong>,<br/>biomedical engineering student.<br/>
 					My projects, my skills and my life.</h1>
 				</div>
 			</header>
@@ -30,11 +31,12 @@
 						<header class="major">
 							<h2>Amateur Radio</h2>
 						</header>
-						<p>The amateur radio environment is a very interesting and stimulating environment. A radio-amateur (OM) is a person who
-							not only wants to talk on the radio, but also actively participates in experimentation in the telecommunications world.
-							Experimentation, desire for novelty and desire to get involved are the characteristics that lead an OM to enter the
+						<p>The amateur radio environment is a very interesting and stimulating environment. An amateur radio operator (OM) is a
+							person who not only wants to speak on the radio,&nbsp;but also actively participates in experimentation within the
+							telecommunications world.
+							Experimentation,&nbsp;desire for novelty and desire to get involved are the characteristics that lead an OM to enter the
 							world of radio.<br>
-							The amateur radio license also attests to a good knowledge of the functioning of a transceiver and the bases of the
+							The amateur radio license also attests a good knowledge of the functioning of a transceiver and the bases of the
 							world of radio communication.
 						</p>
 					</section>
@@ -43,12 +45,10 @@
 					<section id="two">
 						<div class="gal">
 							<h3>My radio experience</h3>
-							<p>It was 2016 when I decided to take the amateur radio license,
-								I was looking for a way to communicate away from the modern frenzy
-								and that would allow me to put my knowledge of electronics to good use.<br/>
-								After a few years I think it was a good idea,
-								even with a modest power of 50W, I managed to make connections throughout the northwest of Italy and I met other
-								OM with which to share my passion.
+							<p>It was 2016 when I decided to take the amateur radio license,&nbsp;I was looking for a way to communicate away
+								from the modern frenzy and that would allow me to put my knowledge of electronics to good use.<br/>
+								After a few years I think it was a good idea,&nbsp;even with a modest power of 50W,&nbsp;I managed to make
+								connections throughout the northwest of Italy and I met other OM with which to share my passion.
 							</p>
 						</div>
 						<div>
@@ -73,6 +73,7 @@
 							</div-->
 						</div>
 					</section>
+			</div>
 
 		<!-- Footer -->
 			<footer id="footer">
@@ -81,6 +82,7 @@
 						<li><a href="docs/memo.pdf" target="_blank" class="icon fa-address-card-o"><span class="label">AddressCard</span></a></li>
 						<li><a href="https://github.com/andreaBalestrini/" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.instagram.com/andrea.balestrini/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					</ul>
 				</div>
 			</footer>
 
