--- a/references.html
+++ b/references.html
@@ -39,7 +39,7 @@
 					</section>
 
 				<!-- Two -->
-					<section class="gal" id="two">
+					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
@@ -48,27 +48,27 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/02.jpg" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
+								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/03.jpg" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
+								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/04.jpg" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
+								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/05.jpg" class="image fit thumb"><img src="images/index/thumbs/05.jpg" alt="" /></a>
+								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/index/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/06.jpg" class="image fit thumb"><img src="images/index/thumbs/06.jpg" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/index/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
@@ -79,7 +79,7 @@
 					</section>
 
 				<!-- Three -->
-					<section class="gal" id="three">
+					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
