--- a/index0.html
+++ b/index0.html
@@ -4,14 +4,18 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
 <html>
+
 	<head>
 		<title>Balestrini Andrea</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+
 	</head>
-	<body class="is-preload" style="margin-top:0;">
+	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
@@ -24,8 +28,9 @@
 
 		<!-- Main -->
 			<div id="main">
-				<iframe id="form-iframe" src="menu.html" style="margin:0; width:100%; height:150px; border:none; overflow:hidden;" scrolling="no" onload="AdjustIframeHeightOnLoad()">
-				</iframe>
+				<div style="height:auto; width:auto;">
+  				<iframe src="menu.html" style="height:auto; width:auto;" ></iframe>
+				</div>
 
 
 
@@ -49,11 +54,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script type="text/javascript">
-				function AdjustIframeHeightOnLoad() { document.getElementById("form-iframe").style.height = document.getElementById("form-iframe").contentWindow.document.body.scrollHeight + "px"; }
-				function AdjustIframeHeight(i) { document.getElementById("form-iframe").style.height = parseInt(i) + "px"; }
-			</script>
-
 
 	</body>
 </html>
