--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 
-	<body class="is-preload" style="margin-top:0;">
+	<body class="is-preload">
 
 		<!-- Main -->
 			<div id="main">
@@ -89,9 +89,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script type="text/javascript">
-				parent.AdjustIframeHeight(document.getElementById("page-container").scrollHeight);
-			</script>
 
 	</body>
 </html>
