Aggiornamento Arduino&Electronics

--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -31,7 +31,9 @@
 						<header class="major">
 							<h2>Arduino and Electronics projects</h2>
 						</header>
-						<p>...writing...</p>
+						<p>I have always loved to build and give vent to my creativity.
+							Thanks to my studies,&nbsp;work and my personal interest,&nbsp;I have been able to improve myself more and more.<br/>
+							In this section you can see an overview of my projects.</p>
 					</section>
 
 				<!-- Three -->
@@ -39,7 +41,8 @@
 						<div class="gal">
 							<h3>Sea Explorer</h3>
 							<p>Spiegazione Rov maturità<br/>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							For the matriculation exam I developed,&nbsp;together with two my classmates,&nbsp;a submarine ROV.
+							The goal was to create a device remotely controlled by computer that could dive for short periods.
 							<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
 							</p>
 							<div class="box alt work-item">
@@ -57,8 +60,11 @@
 					<section id="two">
 						<div class="gal">
 							<h3>ArduinoTube</h3>
-							<p>Spiegazione Rov comune di Saint-Marcel<br/>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							<p>ArduinoTube is a project,&nbsp;based on the ArduinoYun board,&nbsp;which I developed in 2014
+								as an intern for the municipality of Saint-Marcel. The aim of the project was to create a
+								ROV useful for the inspection of the rain irrigation system pipes,&nbsp;in order to make maintenance easier and cheaper.<br/>
+								Through a web application it is possible to control the ROV by connecting to a special interface and,&nbsp;at the same time,&nbsp;
+								to see through an ipCam installed on board.
 							<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
 							</p>
 							<div class="box alt work-item">
@@ -72,7 +78,7 @@
 						</div>
 					</section>
 			</div>
-			
+
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
