--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<p>In the last few years I have developed a certain interest in the amateur radio environment.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="images/UC.jpg" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
+								<a href="index.html" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
 								<h3>Scout</h3>
 								<p>Scouts have always been an important part of my life.</p>
 							</article>
