--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -40,8 +40,7 @@
 					<section id="three">
 						<div class="gal">
 							<h3>Sea Explorer</h3>
-							<p>Spiegazione Rov maturità<br/>
-							For the matriculation exam I developed,&nbsp;together with two my classmates,&nbsp;a submarine ROV.
+							<p>For the matriculation exam I developed,together with two my classmates,&nbsp;a submarine ROV.
 							The goal was to create a device remotely controlled by computer that could dive for short periods.
 							<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
 							</p>
