--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
 								<a href="arduinoandelectronics.html" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
-								<h3>Arduino and Electronics projects</h3>
+								<h3>Arduino, Electronics projects and engineering stuff</h3>
 								<p>Since I was a child,&nbsp;I've always loved creating and inventing objects.&nbsp;Here the projects I have made.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
