--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -29,13 +29,30 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Arduino and Electronics projects</h2>
+							<h2>Arduino, Electronics projects and engineering stuff</h2>
 						</header>
 						<p>I have always loved to build and give vent to my creativity.
 							Thanks to my studies,&nbsp;work and my personal interest,&nbsp;I have been able to improve myself more and more.<br/>
 							In this section you can see an overview of my projects.</p>
 					</section>
 
+					<!-- Four -->
+						<section id="four">
+							<div class="gal">
+								<h3>La Maison qui Rit</h3>
+								<p>I developed this site starting from a preformatted template adapting it to the needs of the job. I also worked on the domain purchase and registration.
+								<br><a href="http:\\www.lamaisonquirit.it" target="_blank">Website</a>
+								</p>
+								<div class="box alt work-item">
+									<div class="row gtr-50 gtr-uniform">
+										<div class="col-4"><a href="images/arduinoandelectronics/Mqr/fulls/01.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Mqr/thumbs/01.jpg" alt="" /></a></div>
+										<div class="col-4"><a href="images/arduinoandelectronics/Mqr/fulls/02.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Mqr/thumbs/02.jpg" alt="" /></a></div>
+										<div class="col-4"><a href="images/arduinoandelectronics/Mqr/fulls/03.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Mqr/thumbs/03.jpg" alt="" /></a></div>
+										<div class="col-4"><a href="images/arduinoandelectronics/Mqr/fulls/04.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Mqr/thumbs/04.jpg" alt="" /></a></div>
+									</div>
+								</div>
+							</div>
+						</section>
 				<!-- Three -->
 					<section id="three">
 						<div class="gal">
