--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<!-- GetInTouch -->
 					<section id="GetInTouch">
 						<h2>Get In Touch</h2>
-						<p>Call me or send me an e-mail and I will contact you as soon as possible!</p>
+						<p>Send me an e-mail and I will contact you as soon as possible!</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
