--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 						<header class="major">
 							<h2>Allow me to introduce myself</h2>
 						</header>
-						<p>Hi! I'm Andrea Balestrini.<br/>...writing...</p>
+						<p>Hi! I'm Andrea Balestrini</p>
+						<p>Where I studied and where I am studying?</p>
+						<p>Skills</p>
 						<ul class="actions">
 							<li><a href="docs/BalestriniCV_en.pdf" target="_blank" class="button primary icon fa-download">Curriculum (en)</a></li>
 							<li><a href="docs/BalestriniCV_it.pdf" target="_blank" class="button primary icon fa-download">Curriculum (it)</a></li>
@@ -40,7 +42,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>What I do?</h2>
+						<h2>Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
 								<a href="arduinoandelectronics.html" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
