Upgrade bottoni lingue

--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -104,6 +104,13 @@
 						<li><a href="https://www.instagram.com/andrea.balestrini/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 				</div>
+				<div>
+					<ul class="icons">
+						<li><p>Languages</p></li>
+						<li><a href="arduinoandelectronics_it.html"><img src="images/It.png" alt="it_lang" height="12" width="24"/></a></li>
+						<li><a href="arduinoandelectronics.html"><img src="images/En.png" alt="en_lang" height="12" width="24"/></a></li>
+					</ul>
+				</div>
 			</footer>
 
 		<!-- Scripts -->
