--- a/index_it.html
+++ b/index_it.html
@@ -17,9 +17,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>,<br/>biomedical engineering student.<br/>
-					My projects, my skills and my life.</h1>
+					<a href="index_it.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<h1><strong>Balestrini Andrea</strong>,<br/>studente in ingegneria biomedica.<br/>
+					La mia vita, miei progetti e le mie competenze.</h1>
 				</div>
 			</header>
 
@@ -29,11 +29,11 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Allow me to introduce myself</h2>
+							<h2>Permettetemi di presentarmi</h2>
 						</header>
-						<p>Hi! I'm Andrea Balestrini</p>
-						<p>Where I studied and where I am studying?</p>
-						<p>Skills</p>
+						<p>Ciao! Mi chiamo Andrea Balestrini.</p>
+						<p>Cosa studio? Dove ho studiato?</p>
+						<p>Competenze</p>
 						<ul class="actions">
 							<li><a href="docs/BalestriniCV_en.pdf" target="_blank" class="button primary icon fa-download">Curriculum (en)</a></li>
 							<li><a href="docs/BalestriniCV_it.pdf" target="_blank" class="button primary icon fa-download">Curriculum (it)</a></li>
@@ -42,40 +42,40 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Projects</h2>
+						<h2>Progetti</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
-								<a href="arduinoandelectronics.html" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
-								<h3>Arduino, Electronics projects and engineering stuff</h3>
-								<p>Since I was a child,&nbsp;I've always loved creating and inventing objects.&nbsp;Here the projects I have made.</p>
+								<a href="arduinoandelectronics_it.html" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
+								<h3>Arduino, Elettronica e simili</h3>
+								<p>Fin da bambino mi &egrave; sempre piaciuto costruire piccoli oggetti.&nbsp;Di seguito alcuni esempi di progetti da me realizzati.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="photography.html" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
-								<h3>Photography</h3>
-								<p>With photography I try to capture the emotions I feel.</p>
+								<a href="photography_it.html" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
+								<h3>Fotografia</h3>
+								<p>Attraverso la fotografia cerco di catturare le emozioni che mi trasmettono i luoghi e le persone. Qui i miei lavori.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="radio.html" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
-								<h3>Amateur radio</h3>
-								<p>Since 2016 I have developed a certain interest in the amateur radio environment.</p>
+								<a href="radio_it.html" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
+								<h3>Radio</h3>
+								<p>A partire dal 2016 mi sono avvicinato al mondo radioamatoriale ed ai suoi interessanti risvolti.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="scout.html" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
+								<a href="scout_it.html" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
 								<h3>Scout</h3>
-								<p>Scouts have always been an important part of my life.</p>
+								<p>L'attivit&agrave; scout ha sempre svolto un ruolo importante nella mia crescita personale.</p>
 							</article>
 						</div>
 					</section>
 
 				<!-- GetInTouch -->
 					<section id="GetInTouch">
-						<h2>Get In Touch</h2>
-						<p>Send me an e-mail and I will contact you as soon as possible!</p>
+						<h2>Contatti</h2>
+						<p>Per contattarmi scrivetemi una mail. Risponder&ograve; il prima possibile.</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3 class="icon fa-home"><span class="label">Address</span></h3>
+										<h3 class="icon fa-home"><span class="label">Indirizzo</span></h3>
 										Aosta Valley, Italy<br/>
 										Turin, Italy
 									</li>
