--- a/radio.html
+++ b/radio.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	
+
 	<body class="is-preload">
 
 		<!-- Header -->
@@ -82,6 +82,13 @@
 						<li><a href="docs/memo.pdf" target="_blank" class="icon fa-address-card-o"><span class="label">AddressCard</span></a></li>
 						<li><a href="https://github.com/andreaBalestrini/" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.instagram.com/andrea.balestrini/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					</ul>
+				</div>
+				<div>
+					<ul class="icons">
+						<li><p>Languages</p></li>
+						<li><a href="radio_it.html"><img src="images/It.png" alt="it_lang" height="12" width="24"/></a></li>
+						<li><a href="radio.html"><img src="images/En.png" alt="en_lang" height="12" width="24"/></a></li>
 					</ul>
 				</div>
 			</footer>
