--- a/radio.html
+++ b/radio.html
@@ -48,7 +48,8 @@
 							<p>It was 2016 when I decided to take the amateur radio license,&nbsp;I was looking for a way to communicate away
 								from the modern frenzy and that would allow me to put my knowledge of electronics to good use.<br/>
 								After a few years I think it was a good idea,&nbsp;even with a modest power of 50W,&nbsp;I managed to make
-								connections throughout the northwest of Italy and I met other OM with which to share my passion.
+								connections throughout the northwest of Italy and I met other OM with which to share my passion.<br/>
+								My callsign is IX1GPG.
 							</p>
 						</div>
 						<div>
