--- a/index_it.html
+++ b/index_it.html
@@ -47,7 +47,7 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="arduinoandelectronics_it.html" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
 								<h3>Arduino, Elettronica e simili</h3>
-								<p>Fin da bambino mi &egrave; sempre piaciuto costruire piccoli oggetti.&nbsp;Di seguito alcuni esempi di progetti da me realizzati.</p>
+								<p>Fin da bambino mi &egrave; sempre piaciuto inventare e costruire piccoli oggetti.&nbsp;Ecco alcuni esempi di progetti da me realizzati.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="photography_it.html" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
