--- a/index_it.html
+++ b/index_it.html
@@ -18,7 +18,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index_it.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>,<br/>studente in ingegneria biomedica.<br/>
+					<h1><strong>Balestrini Andrea</strong>,<br/>studente di ingegneria biomedica.<br/>
 					La mia vita, miei progetti e le mie competenze.</h1>
 				</div>
 			</header>
@@ -52,7 +52,7 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="photography_it.html" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
 								<h3>Fotografia</h3>
-								<p>Attraverso la fotografia cerco di catturare le emozioni che mi trasmettono i luoghi e le persone. Qui i miei lavori.</p>
+								<p>Attraverso la fotografia cerco di catturare le emozioni che mi trasmettono i luoghi e le persone. Qui i miei scatti.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="radio_it.html" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
@@ -62,7 +62,7 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="scout_it.html" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
 								<h3>Scout</h3>
-								<p>L'attivit&agrave; scout ha sempre svolto un ruolo importante nella mia crescita personale.</p>
+								<p>L'attivit&agrave; scout ha sempre rappresentato una parte importante nella mia crescita personale.</p>
 							</article>
 						</div>
 					</section>
