--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="arduinoandelectronics.html" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
 								<h3>Arduino, Electronics projects and engineering stuff</h3>
-								<p>Since I was a child,&nbsp;I've always loved creating and inventing objects.&nbsp;Here the projects I have made.</p>
+								<p>Since I was a child,&nbsp;I've always loved to create and to invent objects.&nbsp;Here the projects I have made.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="photography.html" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
 								<h3>Photography</h3>
-								<p>With photography I try to capture the emotions I feel.</p>
+								<p>Through photography, I try to capture that I feel observing places and people.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="radio.html" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
