--- a/photography_it.html
+++ b/photography_it.html
@@ -29,118 +29,114 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Photography</h2>
+							<h2>Fotografia</h2>
 						</header>
-						<p>In the last years I started to look at the world of photography.
-							I like to look through my photos to show the world as I see it,&nbsp;focusing,&nbsp;in particular,&nbsp;on the
-							nature that surrounds us.<br/>
-							In my shots I use the old polaroid format (1:1) and I don't use photo editing programs.<br/>
-							I'm not a photographer,&nbsp;I'm just a person who likes to photograph.</p>
+						<p>Negli ultimi anni mi sono avvicinato al mondo della fotografia</p>
 					</section>
 
 				<!-- Two -->
 					<section class="gal" id="Two">
-						<h2>Some photos I took</h2>
+						<h2>Alcune mie foto</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/20.jpg" class="image fit thumb"><img src="images/photography/thumbs/20.jpg" alt="" /></a>
 								<h3>Stambecchi allo Zerbion,&nbsp;3 di 3</h3>
-								<p>20 September 2018</p>
+								<p>20 settembre 2018</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/19.jpg" class="image fit thumb"><img src="images/photography/thumbs/19.jpg" alt="" /></a>
 								<h3>Stambecchi allo Zerbion,&nbsp;2 di 3</h3>
-								<p>17 September 2018</p>
+								<p>17 settembre 2018</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/18.jpg" class="image fit thumb"><img src="images/photography/thumbs/18.jpg" alt="" /></a>
 								<h3>Stambecchi allo Zerbion,&nbsp;1 di 3</h3>
-								<p>15 September 2018</p>
+								<p>15 settembre 2018</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/17.jpg" class="image fit thumb"><img src="images/photography/thumbs/17.jpg" alt="" /></a>
 								<h3>Guarda mamma,&nbsp;un camoscio!&nbsp;(cit.)</h3>
-								<p>11 December 2017</p>
+								<p>11 dicembre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/16.jpg" class="image fit thumb"><img src="images/photography/thumbs/16.jpg" alt="" /></a>
 								<h3>Gloomy Mood</h3>
-								<p>2 December 2017</p>
+								<p>2 dicembre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/15.jpg" class="image fit thumb"><img src="images/photography/thumbs/15.jpg" alt="" /></a>
 								<h3>The sentries of the lawn</h3>
-								<p>20 November 2017</p>
+								<p>20 novembre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/14.jpg" class="image fit thumb"><img src="images/photography/thumbs/14.jpg" alt="" /></a>
 								<h3>Between earth and sky</h3>
-								<p>15 November 2017</p>
+								<p>15 novembre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/13.jpg" class="image fit thumb"><img src="images/photography/thumbs/13.jpg" alt="" /></a>
 								<h3>Watch up</h3>
-								<p>8 November 2017</p>
+								<p>8 novembre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/12.jpg" class="image fit thumb"><img src="images/photography/thumbs/12.jpg" alt="" /></a>
 								<h3>Il Vallone di Saint-Barth&eacute;lemy,&nbsp;in tutto il suo splendore autunnale </h3>
-								<p>29 October 2017</p>
+								<p>29 ottobre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/11.jpg" class="image fit thumb"><img src="images/photography/thumbs/11.jpg" alt="" /></a>
 								<h3>Random dog</h3>
-								<p>27 October 2017</p>
+								<p>27 ottobre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/10.jpg" class="image fit thumb"><img src="images/photography/thumbs/10.jpg" alt="" /></a>
 								<h3>Mountain men</h3>
-								<p>22 October 2017</p>
+								<p>22 ottobre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/09.jpg" class="image fit thumb"><img src="images/photography/thumbs/09.jpg" alt="" /></a>
 								<h3>The leaves fall on the road</h3>
-								<p>16 October 2017</p>
+								<p>16 ottobre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/08.jpg" class="image fit thumb"><img src="images/photography/thumbs/08.jpg" alt="" /></a>
 								<h3>Still Image</h3>
-								<p>6 October 2017</p>
+								<p>6 ottobre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/07.jpg" class="image fit thumb"><img src="images/photography/thumbs/07.jpg" alt="" /></a>
 								<h3>Radici</h3>
-								<p>4 October 2017</p>
+								<p>4 ottobre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/06.jpg" class="image fit thumb"><img src="images/photography/thumbs/06.jpg" alt="" /></a>
 								<h3>Laghi della comba Thuilette&nbsp;(2100m s.l.m.),&nbsp;La Thuile,&nbsp;Valle d'Aosta</h3>
-								<p>2 October 2017</p>
+								<p>2 ottobre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/05.jpg" class="image fit thumb"><img src="images/photography/thumbs/05.jpg" alt="" /></a>
 								<h3>Comba Sozin,&nbsp;La Thuile,&nbsp;Valle d'Aosta</h3>
-								<p>1 October 2017</p>
+								<p>1 ottobre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/04.jpg" class="image fit thumb"><img src="images/photography/thumbs/04.jpg" alt="" /></a>
 								<h3>Inseguendo il Bianconiglio</h3>
-								<p>27 September 2017</p>
+								<p>27 settembre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/03.jpg" class="image fit thumb"><img src="images/photography/thumbs/03.jpg" alt="" /></a>
 								<h3>Waiting for what?</h3>
-								<p>9 September 2017</p>
+								<p>9 settembre 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/02.jpg" class="image fit thumb"><img src="images/photography/thumbs/02.jpg" alt="" /></a>
 								<h3>Portomar&iacute;n&nbsp;-&nbsp;Palas De Rei</h3>
-								<p>18 August 2017</p>
+								<p>18 agosto 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/01.jpg" class="image fit thumb"><img src="images/photography/thumbs/01.jpg" alt="" /></a>
 								<h3>Villafranca del Bierzo&nbsp;-&nbsp;O Cebreiro</h3>
-								<p>14 Agust 2017</p>
+								<p>14 agosto 2017</p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -160,7 +156,7 @@
 				</div>
 				<div>
 					<ul class="icons">
-						<li><p>Languages</p></li>
+						<li><p>Lingue</p></li>
 						<li><a href="photography_it.html"><img src="images/It.png" alt="it_lang" height="12" width="24"/></a></li>
 						<li><a href="photography.html"><img src="images/En.png" alt="en_lang" height="12" width="24"/></a></li>
 					</ul>
