Aggiornamento foto.html

--- a/index_it.html
+++ b/index_it.html
@@ -52,7 +52,7 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="photography_it.html" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
 								<h3>Fotografia</h3>
-								<p>Attraverso la fotografia cerco di catturare le emozioni che mi trasmettono i luoghi e le persone. Qui i miei scatti.</p>
+								<p>Attraverso la fotografia cerco di catturare le emozioni che mi trasmettono i luoghi e le persone. Qui alcuni miei scatti.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="radio_it.html" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
