--- a/photography_it.html
+++ b/photography_it.html
@@ -31,7 +31,11 @@
 						<header class="major">
 							<h2>Fotografia</h2>
 						</header>
-						<p>Negli ultimi anni mi sono avvicinato al mondo della fotografia</p>
+						<p>Negli ultimi anni mi sono avvicinato al mondo della fotografia cercando, attraverso i miei scatti,&nbsp;
+							di rendere le emozioni che provo,&nbsp; e concentrandomi in particolare sulla natura che ci circonda.</br>
+							Nei miei scatti uso prevalentemente il vecchio formato polaroid (1:1) e non uso programmi di editing.</br>
+							Non sono un fotografo, semplicemente mi piace fare foto.
+						</p>
 					</section>
 
 				<!-- Two -->
@@ -156,7 +160,7 @@
 				</div>
 				<div>
 					<ul class="icons">
-						<li><p>Lingue</p></li>
+						<li><p>Languages</p></li>
 						<li><a href="photography_it.html"><img src="images/It.png" alt="it_lang" height="12" width="24"/></a></li>
 						<li><a href="photography.html"><img src="images/En.png" alt="en_lang" height="12" width="24"/></a></li>
 					</ul>
