Aggiornamento radio it

--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -41,7 +41,7 @@
 							<div class="gal">
 								<h3>La Maison qui Rit</h3>
 								<p>I developed this site starting from a preformatted template adapting it to the needs of the job. I also worked on the domain purchase and registration.
-								<br><a href="http:\\www.lamaisonquirit.it" target="_blank">Website</a>
+								<br/><a href="http:\\www.lamaisonquirit.it" target="_blank">Website</a>
 								</p>
 								<div class="box alt work-item">
 									<div class="row gtr-50 gtr-uniform">
@@ -59,7 +59,7 @@
 							<h3>Sea Explorer</h3>
 							<p>For the matriculation exam I developed,&nbsp;together with two my classmates,&nbsp;a submarine ROV.
 							The goal was to create a device remotely controlled by computer that could dive for short periods.
-							<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
+							<br/><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
 							</p>
 							<div class="box alt work-item">
 								<div class="row gtr-50 gtr-uniform">
@@ -81,7 +81,7 @@
 								ROV useful for the inspection of the rain irrigation system pipes,&nbsp;in order to make maintenance easier and cheaper.<br/>
 								Through a web application it is possible to control the ROV by connecting to a special interface and,&nbsp;at the same time,&nbsp;
 								to see through an ipCam installed on board.
-							<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
+							<br/><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
 							</p>
 							<div class="box alt work-item">
 								<div class="row gtr-50 gtr-uniform">
