--- a/photography_it.html
+++ b/photography_it.html
@@ -32,8 +32,8 @@
 							<h2>Fotografia</h2>
 						</header>
 						<p>Negli ultimi anni mi sono avvicinato al mondo della fotografia cercando, attraverso i miei scatti,&nbsp;
-							di rendere le emozioni che provo,&nbsp; e concentrandomi in particolare sulla natura che ci circonda.</br>
-							Nei miei scatti uso prevalentemente il vecchio formato polaroid (1:1) e non uso programmi di editing.</br>
+							di rendere le emozioni che provo concentrandomi in particolare sulla natura che ci circonda.<br/>
+							Nei miei scatti uso prevalentemente il vecchio formato polaroid (1:1) e non uso programmi di editing.<br/>
 							Non sono un fotografo, semplicemente mi piace fare foto.
 						</p>
 					</section>
