--- a/radio_it.html
+++ b/radio_it.html
@@ -15,13 +15,13 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>,<br/>biomedical engineering student.<br/>
-					My projects, my skills and my life.</h1>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+				<h1><strong>Balestrini Andrea</strong>,<br/>studente di ingegneria biomedica.<br/>
+				La mia vita, miei progetti e le mie competenze.</h1>
+			</div>
+		</header>
 
 		<!-- Main -->
 			<div id="main">
@@ -29,31 +29,33 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Amateur Radio</h2>
+							<h2>Attivit&agrave; radioamatoriale</h2>
 						</header>
-						<p>The amateur radio environment is a very interesting and stimulating environment. An amateur radio operator (OM) is a
-							person who not only wants to speak on the radio,&nbsp;but also actively participates in experimentation within the
-							telecommunications world.
-							Experimentation,&nbsp;desire for novelty and desire to get involved are the characteristics that lead an OM to enter the
-							world of radio.<br/>
-							The amateur radio license also attests a good knowledge of the functioning of a transceiver and the bases of the
-							world of radio communication.
+						<p>
+							L'ambiente radioamatoriale è un luogo molto interessante e stimolante. Un radioamatore (OM) non è una
+							persona che vuole solo fare radio,&nbsp;ma anche partecipare attivamente all' evoluzione del
+							mondo delle telecomunicazioni.
+							Sperimentazione,&nbsp;desiderio di novità e di mettersi in gioco sono le caratteristiche che portano un OM a entrare
+							mondo della radio.<br/>
+							La patente da radioamatore attesta anche una buona conoscenza del funzionamento di un apparecchio ricetrasmittente
+							e delle regole di base del mondo della radiocomunicazione.
 						</p>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
 						<div class="gal">
-							<h3>My radio experience</h3>
-							<p>It was 2016 when I decided to take the amateur radio license,&nbsp;I was looking for a way to communicate away
-								from the modern frenzy and that would allow me to put my knowledge of electronics to good use.<br/>
-								After a few years I think it was a good idea,&nbsp;even with a modest power of 50W,&nbsp;I managed to make
-								connections throughout the northwest of Italy and I met other OM with which to share my passion.<br/>
-								My callsign is IX1GPG.
+							<h3>La mia esperienza nel mondo Radioamatoriale</h3>
+							<p>All' inizio del 2016 ho deciso che avrei preso la paente da radioamatore. Stavo cercando un modo di comunicare pi&ugrave;
+								interessante e stimolante dei soliti che, in pi&ugreve;,&nbsp;mi permettesse di fruttare e migliorae le mie conoscenze ingegneristiche.<br/>
+								Dopo qualche anno continuo a pensare di aver fatto un ottimo investimento dedicando il mio tempo a questa attivit&agrave;.
+								Nonostante la modesta potenza di 50W sono riuscio ad effettuare chiamate in tutto il Nord-Ovest dell'Italia e ad incontrare
+								altri OM con cui condividere la mia passione.<br/>
+								Il mio nominativo radioamatoriale &egrave; IX1GPG.
 							</p>
 						</div>
 						<div>
-							<h4>My radio equipment</h4>
+							<h4>Il mio equipaggiamento radio</h4>
 							<p>
 								<h5>ICOM IC2-SE</h5>
 								<a href="docs/IC-2SE_italiano.pdf" target="_blank">Manuale d'uso IC-2SE (it).</a>
